picture for the mortage

--- a/index.html
+++ b/index.html
@@ -70,14 +70,12 @@
   <!-- RIGHT SIDE RESULTS -->
   <div class="results-section">
     <div class="results-placeholder" id="resultsPlaceholder">
-      <img src="./assets/images/illustration-empty.svg" class="empty-img">
-      <h3>Results shown here</h3>
-      <p>Complete the form and click “calculate repayments” to see what your monthly repayments would be.</p>
-    </div>
+      <img src="OIP.webp" class="img">
+      
 
     <div class="results-box hidden" id="resultsBox">
       <h4>Your results</h4>
-      <p>Your results are shown below based on the information you provided.</p>
+      <p>Your results are shown below based on the information you provided. To adjust the result, edit the form and click "calculate repayments" again.</p>
 
       <div class="result-card">
         <p class="small-label">Your monthly repayments</p>
